KSENROLL-3363: - Fixed wrapping issues with Chrome and FF - Added styling for AOC status - Fixed css issues with Create new and Rename cluster dialogs
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@38343 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-web/src/main/webapp/ks-enroll/css/enroll.css
+++ b/ks-enroll-web/src/main/webapp/ks-enroll/css/enroll.css
@@ -59,13 +59,48 @@
 }
 
 .uif-rg-message-partial{
-    color: blue;
+    background-color: #FFFFCC;
+    padding: 5px 10px;
+    border-right: 5px solid #FFFFFF;
 }
 
 .uif-rg-message-all{
-    color: green;
+    background-color: #C6F785;
+    padding: 5px 10px;
+    border-right: 5px solid #FFFFFF;
 }
 
 .uif-rg-message-none{
-    color: yellow;
+    background-color: #B1ECFF;
+    padding: 5px 10px;
+    border-right: 5px solid #FFFFFF;
+}
+
+.aoc_links
+{
+    float: right;
+    padding: 8px;
+}
+
+a
+{
+    white-space: normal;
+}
+
+.aoc_stateandlinks
+{
+    background: #EDEDED;
+}
+
+
+
+.aoc_stateandlinks .uif-boxLayoutHorizontalItem
+{
+    margin-bottom: 0px;
+}
+
+.aoc_dialog .uif-dialogHeader
+{
+    background:none;
+    margin-bottom: 0px;
 }
